# clang-me

./: CMakeLists.txt  LICENSE  README.md  test.sh
.github/workflows/: ccpp.yml
cmake/: clang-format-me.cmake
example/: CMakeLists.txt
example/default-way-of-calling/: CMakeLists.txt
example/format-me/: CMakeLists.txt
example/override-add-functions/: CMakeLists.txt
